@@ -1,6 +1,11 @@
 KNOWN BUGS:
 * The code sometimes uses timeout_client where it should use a server timeout.
 |
+Changes since 20080904a:
+- Documentation: filterfile(5) now refers to pcrepattern(3) instead of
+  pcre(3). It mentions that patterns are case sensitive and (?i) can be
+  used for caseless matching.
+
 20080904a: Changes since 20080624a:
 - Feature/fix: fetchnews -S <server> can now be specified more than once, to
   query some servers. Patch courtesy of Robert Grimm <rob@robgri.de>.
